--- a/IngresoPedidos/LoginWindow.xaml
+++ b/IngresoPedidos/LoginWindow.xaml
@@ -1,16 +1,16 @@
-﻿<Window x:Class="IngresoPedidos.Views.Login"
+﻿<Window x:Class="IngresoPedidos.LoginWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:IngresoPedidos.Views"
         mc:Ignorable="d"
         Title="ALTA DE PEDIDOS: INGRESO" Height="124" Width="325" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Icon="/IngresoPedidos;component/Resources/agregar.ico">
+    
     <Grid FocusManager.FocusedElement="{Binding ElementName=tbLegajo}">
         <Label Content="CONTRASEÑA" HorizontalAlignment="Left" Margin="10,45,0,0" VerticalContentAlignment="Center" FontWeight="Bold" Padding="1" HorizontalContentAlignment="Right" Background="{x:Null}" FontFamily="Consolas" Height="26" VerticalAlignment="Top"/>
         <Label Content="LEGAJO" HorizontalAlignment="Left" Margin="10,12,0,0" VerticalContentAlignment="Center" FontWeight="Bold" Padding="1" HorizontalContentAlignment="Right" Background="{x:Null}" FontFamily="Consolas" Height="26" VerticalAlignment="Top" Width="68"/>
-        <TextBox Name="tbLegajo" Margin="83,12,91,0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" TabIndex="1" Height="26" VerticalAlignment="Top"/>
-        <PasswordBox Name="pbContraseña" Margin="83,45,91,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="Consolas" FontSize="14" TabIndex="2" Height="26" VerticalAlignment="Top"/>
+        <TextBox Name="tbLegajo" KeyDown="OnKeyDownHandler" Margin="83,12,91,0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" TabIndex="1" Height="26" VerticalAlignment="Top"/>
+        <PasswordBox Name="pbContraseña" KeyDown="OnKeyDownHandler" Margin="83,45,91,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="Consolas" FontSize="14" TabIndex="2" Height="26" VerticalAlignment="Top"/>
         <Button Name="btnLogin" Click="btnLogin_Click" ToolTip="Ingresar" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="{x:Null}" Margin="0,12,15,0" TabIndex="3" Height="59" VerticalAlignment="Top" HorizontalAlignment="Right" Width="63">
             <Image Source="/IngresoPedidos;component/Resources/login.ico"  />
         </Button>
