--- a/IngresoPedidos/App.xaml
+++ b/IngresoPedidos/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="IngresoPedidos.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="LoginWindow.xaml">
+             StartupUri="MainWindow.xaml">
     
     <Application.Resources>
         
@@ -171,19 +171,19 @@
         </Style>
         <!--#endregion-->
         
-        <!--Boton del ComboBox-->
+        <!--Boton del ComboBox--><!--
         <ControlTemplate x:Key="ComboBoxToggleButton" TargetType="{x:Type ToggleButton}">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition />
-                    <!--Ancho del boton-->
+                    --><!--Ancho del boton--><!--
                     <ColumnDefinition Width="15" />
                 </Grid.ColumnDefinitions>
-                <!--Borde relleno/fondo del boton-->
+                --><!--Borde relleno/fondo del boton--><!--
                 <Border x:Name="Border" Grid.ColumnSpan="2" CornerRadius="0" Background="Transparent" BorderBrush="Transparent" BorderThickness="0" />
-                <!--parte del texto-->
+                --><!--parte del texto--><!--
                 <Border Grid.Column="0" CornerRadius="0" Margin="0" Background="Transparent" BorderBrush="Transparent" BorderThickness="0,0,0,0" />
-                <!--flecha-->
+                --><!--flecha--><!--
                 <Path x:Name="Arrow" Grid.Column="1" Fill="Black" HorizontalAlignment="Center" VerticalAlignment="Center" Data="M0,0 L0,2 L4,6 L8,2 L8,0 L4,4 z" />
             </Grid>
         </ControlTemplate>
@@ -197,22 +197,22 @@
             <Setter Property="OverridesDefaultStyle" Value="true"/>
             <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Auto"/>
             <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto"/>
-            <!--Scrollea por items y no por pixeles-->
+            --><!--Scrollea por items y no por pixeles--><!--
             <Setter Property="ScrollViewer.CanContentScroll" Value="true"/>
-            <!--valores minimos de ancho y alto del combobox-->
+            --><!--valores minimos de ancho y alto del combobox--><!--
             <Setter Property="MinWidth" Value="80"/>
             <Setter Property="MinHeight" Value="20"/>
-            <!--Color de fuente cuando esta cerrado-->
+            --><!--Color de fuente cuando esta cerrado--><!--
             <Setter Property="Foreground" Value="Black"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type ComboBox}">
                         <Grid>
-                            <!--Boton para desplegar-->
+                            --><!--Boton para desplegar--><!--
                             <ToggleButton Name="ToggleButton" Template="{StaticResource ComboBoxToggleButton}" Grid.Column="2" Focusable="false" IsChecked="{Binding Path=IsDropDownOpen,Mode=TwoWay,RelativeSource={RelativeSource TemplatedParent}}" ClickMode="Press"/>
-                            <!--Texto cuando esta cerrado-->
+                            --><!--Texto cuando esta cerrado--><!--
                             <ContentPresenter Name="ContentSite" IsHitTestVisible="False" Content="{TemplateBinding SelectionBoxItem}" ContentTemplate="{TemplateBinding SelectionBoxItemTemplate}" ContentTemplateSelector="{TemplateBinding ItemTemplateSelector}" Margin="3,3,15,3" VerticalAlignment="Center" HorizontalAlignment="Right" />
-                            <!--parte desplegable al clickear-->
+                            --><!--parte desplegable al clickear--><!--
                             <Popup Name="Popup" Placement="Bottom" IsOpen="{TemplateBinding IsDropDownOpen}" AllowsTransparency="True" Focusable="False" PopupAnimation="None">
                                 <Grid Name="DropDown" SnapsToDevicePixels="True" MinWidth="{TemplateBinding ActualWidth}" MaxHeight="{TemplateBinding MaxDropDownHeight}">
                                     <Border x:Name="DropDownBorder" Background="#FFA9D1F4" BorderThickness="1" BorderBrush="#888888"/>
@@ -227,7 +227,7 @@
             </Setter>
         </Style>
 
-        <!-- ComboBoxItem -->
+        --><!-- ComboBoxItem --><!--
         <Style x:Key="{x:Type ComboBoxItem}" TargetType="{x:Type ComboBoxItem}">
             <Setter Property="SnapsToDevicePixels" Value="true"/>
             <Setter Property="Foreground" Value="Black"/>
@@ -235,13 +235,13 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type ComboBoxItem}">
-                        <!--alineacion del texto cuando esta abierto-->
+                        --><!--alineacion del texto cuando esta abierto--><!--
                         <Border Name="Border" Padding="1" SnapsToDevicePixels="true" HorizontalAlignment="Stretch">
                             <ContentPresenter />
                         </Border>
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsHighlighted" Value="true">
-                                <!--Color de la lista de items en MouseOver-->
+                                --><!--Color de la lista de items en MouseOver--><!--
                                 <Setter TargetName="Border" Property="Background" Value="#FF0078D7"/>
                                 <Setter Property="Foreground" Value="GhostWhite"/>
                             </Trigger>
@@ -250,7 +250,7 @@
                 </Setter.Value>
             </Setter>
         </Style>
-        <!--#endregion-->
+        --><!--#endregion-->
 
     </Application.Resources>
     
