--- a/IngresoPedidos/BusquedaWindow.xaml
+++ b/IngresoPedidos/BusquedaWindow.xaml
@@ -4,29 +4,16 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="BUSQUEDA" Height="228.706" Width="248" ResizeMode="NoResize" WindowStartupLocation="CenterOwner"  Icon="/IngresoPedidos;component/Resources/agregar.ico">
-    <!--xmlns:sys="clr-namespace:System;assembly=mscorlib"-->
-    <!--<DatePicker Margin="81,107,9,0" SelectedDate="{x:Static sys:DateTime.Now}" VerticalAlignment="Top" FontFamily="Consolas"/>-->
-    <Grid FocusManager.FocusedElement="{Binding ElementName=tbKeyword}">
-        <Label Content="CLAVE" Background="{x:Null}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10,0,0" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" Height="24" FontFamily="Consolas" FontWeight="Bold"/>
-        <Label Content="CAMPO" Background="{x:Null}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,39,0,0" Width="43" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" Height="24" FontFamily="Consolas" FontWeight="Bold"/>
-        <Label Content="DESDE" Background="{x:Null}" Margin="10,68,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Width="43" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" Height="24" FontFamily="Consolas" FontWeight="Bold"/>
-        <Label Content="HASTA" Background="{x:Null}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,97,0,0" Width="43" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" Height="24" FontFamily="Consolas" FontWeight="Bold"/>
+        Title="BUSQUEDA" Height="220" Width="160" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" SizeToContent="WidthAndHeight" Icon="/IngresoPedidos;component/Resources/buscar.ico" KeyDown="OnKeyDown">
 
-        <ComboBox Style="{x:Null}" Margin="58,39,9,0" VerticalAlignment="Top" Height="24" FontFamily="Consolas" SelectedIndex="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Padding="15,0,0,0">
-            <ComboBoxItem>PEDIDO</ComboBoxItem>
-            <ComboBoxItem>MODELO</ComboBoxItem>
-            <ComboBoxItem>PRODUCTO</ComboBoxItem>
-            <ComboBoxItem>ARTICULO</ComboBoxItem>
-            <ComboBoxItem>CANTIDAD</ComboBoxItem>
-            <ComboBoxItem>SUCESOR</ComboBoxItem>
-            <ComboBoxItem>ANTERIOR</ComboBoxItem>
-        </ComboBox>
-        <TextBox Name="tbKeyword" Height="24" Margin="58,10,9,0" TextWrapping="Wrap" VerticalAlignment="Top" FontFamily="Consolas" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-        <DatePicker Margin="58,68,10,0" VerticalAlignment="Top" FontFamily="Consolas"/>
-        <DatePicker Margin="58,97,10,0" VerticalAlignment="Top" Height="24" FontFamily="Consolas"/>
-        <Button ToolTip="Buscar!" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0,0,0,10" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}">
-            <Image Source="/IngresoPedidos;component/Resources/buscar.ico" Width="48" Height="48" HorizontalAlignment="Center" VerticalAlignment="Center" />
-        </Button>
+    <Grid FocusManager.FocusedElement="{Binding ElementName=tbKeyword}" Height="191" Width="154">
+
+        <TextBox Name="tbKeyword" Height="24" Margin="10,10,10,0" TextWrapping="Wrap" VerticalAlignment="Top" FontFamily="Consolas" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+        <ComboBox Name="cbCampo" SelectedIndex="0" Margin="10,39,10,0" VerticalAlignment="Top" Height="24" FontFamily="Consolas" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Padding="15,0,0,0"/>
+        <DatePicker Name="dpFechaInicial" DisplayDateStart="01/01/2019" Margin="10,68,10,0" VerticalAlignment="Top" FontFamily="Consolas"/>
+        <DatePicker Name="dpFechaFinal" DisplayDateStart="01/01/2019" Margin="10,97,10,0" VerticalAlignment="Top" Height="24" FontFamily="Consolas"/>
+        <Button Name="btnIniciarBusqueda" Click="btnIniciarBusqueda_Click" Content="Buscar" ToolTip="Buscar!" Margin="0,0,0,10" HorizontalAlignment="Center" Width="70" Height="22" VerticalAlignment="Bottom"/>
+        <ComboBox Name="cbCampoFecha" Margin="10,126,10,0" VerticalAlignment="Top" Height="24" FontFamily="Consolas" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Padding="15,0,0,0"/>
+
     </Grid>
 </Window>
