--- a/IngresoPedidos/CambiarContraseña.xaml
+++ b/IngresoPedidos/CambiarContraseña.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:IngresoPedidos"
         mc:Ignorable="d"
-        Title="CAMBIAR CONTRASEÑA" Height="200" Width="320" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" Icon="/IngresoPedidos;component/Resources/agregar.ico">
+        Title="CAMBIAR CONTRASEÑA" Height="200" Width="320" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" Icon="/IngresoPedidos;component/Resources/agregar.ico" KeyDown="OnKeyDown">
 
     <Grid FocusManager.FocusedElement="{Binding ElementName=pbContraseñaActual}" >
 
@@ -13,9 +13,9 @@
         <Label Content="NUEVA CONTRASEÑA" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" FontWeight="Bold" Padding="1" Height="26" HorizontalContentAlignment="Right" Background="{x:Null}" FontFamily="Consolas" Width="121"/>
         <Label Content="REPETIR CONTRASEÑA" HorizontalAlignment="Left" Margin="10,72,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" FontWeight="Bold" Padding="1" Height="26" HorizontalContentAlignment="Right" Background="{x:Null}" FontFamily="Consolas"/>
 
-        <PasswordBox Name="pbContraseñaActual" KeyDown="OnKeyDownHandler" Height="26" VerticalAlignment="Top" Margin="136,10,11,0" FontFamily="Consolas" FontSize="14" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" TabIndex="1"/>
-        <PasswordBox Name="pbContraseñaNueva1" KeyDown="OnKeyDownHandler" Height="26" Margin="136,41,11,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="Consolas" FontSize="14" TabIndex="2"/>
-        <PasswordBox Name="pbContraseñaNueva2" KeyDown="OnKeyDownHandler" Height="26" Margin="136,72,11,0" VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" TabIndex="3"/>
+        <PasswordBox Name="pbContraseñaActual" KeyDown="OnKeyDown" Height="26" VerticalAlignment="Top" Margin="136,10,11,0" FontFamily="Consolas" FontSize="14" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" TabIndex="1"/>
+        <PasswordBox Name="pbContraseñaNueva1" KeyDown="OnKeyDown" Height="26" Margin="136,41,11,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="Consolas" FontSize="14" TabIndex="2"/>
+        <PasswordBox Name="pbContraseñaNueva2" KeyDown="OnKeyDown" Height="26" Margin="136,72,11,0" VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" TabIndex="3"/>
 
         <Button Name="btnGuardarContraseña" Click="btnGuardarContraseña_Click" ToolTip="Guardar contraseña nueva" HorizontalAlignment="Center" VerticalAlignment="Bottom" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="{x:Null}" Margin="0,0,0,5" TabIndex="4">
             <Image Source="/IngresoPedidos;component/Resources/guardar.ico" Width="48" Height="48"  />
