--- a/IngresoPedidos/FormularioPedido.xaml
+++ b/IngresoPedidos/FormularioPedido.xaml
@@ -4,30 +4,20 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="FORMULARIO DE PEDIDOS" Height="480" Width="244" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" Icon="/IngresoPedidos;component/Resources/agregar.ico">
+        Title="FORMULARIO DE PEDIDOS" Height="450" Width="226" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" SizeToContent="WidthAndHeight" Icon="/IngresoPedidos;component/Resources/agregar.ico">
 
-    <Grid FocusManager.FocusedElement="{Binding ElementName=tbPedido}">
+    <Grid FocusManager.FocusedElement="{Binding ElementName=tbPedido}" Width="220" Height="421">
 
-        <Button Name="btnGuardar" Click="btnGuardar_Click" ToolTip="Guardar en Base de Datos" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="{x:Null}" Margin="0,0,0,10" TabIndex="9" HorizontalAlignment="Center" Width="52" Height="52" VerticalAlignment="Bottom">
-            <Image Source="/IngresoPedidos;component/Resources/guardar.ico" Width="48" Height="48"  />
-        </Button>
-
-        <Label Content="PEDIDO" Margin="8,10,0,0" VerticalContentAlignment="Center" Padding="1" HorizontalContentAlignment="Right" FontFamily="Consolas" Height="26" VerticalAlignment="Top" HorizontalAlignment="Left" Width="57" Background="{x:Null}" FontWeight="Bold"/>
-        <Label Content="MODELO" Margin="8,41,0,0" VerticalContentAlignment="Center" Padding="1" RenderTransformOrigin="0.292,0.533" HorizontalContentAlignment="Right" Background="{x:Null}" FontFamily="Consolas" HorizontalAlignment="Left" Width="57" Height="26" VerticalAlignment="Top" FontWeight="Bold"/>
-        <Label Content="ARTICULO" Margin="8,103,0,0" VerticalContentAlignment="Center" Padding="1" HorizontalContentAlignment="Right" Background="{x:Null}" FontFamily="Consolas" HorizontalAlignment="Left" Width="57" Height="26" VerticalAlignment="Top" FontWeight="Bold"/>
-        <Label Content="PRODUCTO" Margin="8,72,0,0" VerticalContentAlignment="Center" Padding="1" HorizontalContentAlignment="Right" Background="{x:Null}" FontFamily="Consolas" HorizontalAlignment="Left" Width="57" Height="26" VerticalAlignment="Top" FontWeight="Bold"/>
-        <Label Content="CANTIDAD" Margin="8,134,0,0" VerticalContentAlignment="Center" Padding="1" HorizontalContentAlignment="Right" Background="{x:Null}" FontFamily="Consolas" HorizontalAlignment="Left" Width="57" Height="26" VerticalAlignment="Top" FontWeight="Bold"/>
-        <Label Content="ANTERIOR" Margin="8,196,0,0" VerticalContentAlignment="Center" Padding="1" HorizontalContentAlignment="Right" Background="{x:Null}" FontFamily="Consolas" Height="26" VerticalAlignment="Top" HorizontalAlignment="Left" Width="57" FontWeight="Bold"/>
-        <Label Content="OBSERVACION" Margin="8,228,0,197" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontWeight="Bold" Padding="1" Background="{x:Null}" FontFamily="Consolas" HorizontalAlignment="Left" Width="212"/>
-        <Label Content="ESTADO" Margin="8,165,0,0" VerticalContentAlignment="Center" Padding="1" RenderTransformOrigin="-0.775,4.333" HorizontalContentAlignment="Right" Background="{x:Null}" FontFamily="Consolas" HorizontalAlignment="Left" Width="57" Height="26" VerticalAlignment="Top" FontWeight="Bold"/>
-        <TextBox Name="tbArticulo" TextWrapping="Wrap" Margin="70,103,0,0" FontFamily="Consolas" FontSize="14" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" TabIndex="4" HorizontalAlignment="Left" Width="150" Height="26" VerticalAlignment="Top"/>
-        <ComboBox Name="cbModelo" Style="{x:Null}" Margin="70,42,0,0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" RenderTransformOrigin="0.515,-1.115" Padding="15,0,0,0" TabIndex="2" HorizontalAlignment="Left" Width="150" Height="26" VerticalAlignment="Top">
+        <Button Name="btnGuardar" Click="btnGuardar_Click" Content="Guardar" ToolTip="Guardar en Base de Datos" Margin="75,0,75,10" TabIndex="9" Height="22" VerticalAlignment="Bottom" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+        <Label Content="OBSERVACION" Margin="10,228,10,0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontWeight="Bold" Padding="1" Background="{x:Null}" FontFamily="Consolas" VerticalAlignment="Top"/>
+        <TextBox Name="tbArticulo" Text="ARTICULO" Foreground="Gray" TextWrapping="Wrap" Margin="10,103,10,0" FontFamily="Consolas" FontSize="14" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" TabIndex="4" Height="26" VerticalAlignment="Top"/>
+        <ComboBox Name="cbModelo" IsEditable="True" IsReadOnly="True" Text="MODELO" Foreground="Gray" Style="{x:Null}" Margin="10,42,10,0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" RenderTransformOrigin="0.515,-1.115" Padding="15,0,0,0" TabIndex="2" Height="26" VerticalAlignment="Top">
             <ComboBoxItem>H8</ComboBoxItem>
             <ComboBoxItem>L6</ComboBoxItem>
             <ComboBoxItem>SPANKY</ComboBoxItem>
             <ComboBoxItem>WINGS</ComboBoxItem>
         </ComboBox>
-        <ComboBox Name="cbEstado" Style="{x:Null}" IsEnabled="True" SelectedIndex="0" Margin="70,165,0,0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Padding="15,0,0,0" TabIndex="6" HorizontalAlignment="Left" Width="150" Height="26" VerticalAlignment="Top">
+        <ComboBox Name="cbEstado" Style="{x:Null}" IsEnabled="True" SelectedIndex="0" Margin="10,165,10,0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Padding="15,0,0,0" TabIndex="6" Height="26" VerticalAlignment="Top">
             <ComboBoxItem>INGRESADO</ComboBoxItem>
             <ComboBoxItem>COMPLETO</ComboBoxItem>
             <ComboBoxItem>INCOMPLETO</ComboBoxItem>
@@ -36,15 +26,15 @@
             <ComboBoxItem>REPROCESADO</ComboBoxItem>
             <ComboBoxItem>DESPACHADO</ComboBoxItem>
         </ComboBox>
-        <TextBox Name="tbAnterior" Margin="70,196,0,0" TextWrapping="Wrap" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="Consolas" FontSize="14" TabIndex="7" HorizontalAlignment="Left" Width="150" Height="26" VerticalAlignment="Top"/>
-        <TextBox Name="tbCantidad" Margin="70,134,0,0" TextWrapping="Wrap" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" TabIndex="5" HorizontalAlignment="Left" Width="150" Height="26" VerticalAlignment="Top"/>
-        <ComboBox Name="cbProducto" Style="{x:Null}" Margin="70,72,0,0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Padding="15,0,0,0" TabIndex="3" HorizontalAlignment="Left" Width="150" Height="26" VerticalAlignment="Top">
+        <TextBox Name="tbAnterior" Text="ANTERIOR" Foreground="Gray" Margin="10,196,10,0" TextWrapping="Wrap" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="Consolas" FontSize="14" TabIndex="7" Height="26" VerticalAlignment="Top"/>
+        <TextBox Name="tbCantidad" Text="CANTIDAD" Foreground="Gray" Margin="10,134,10,0" TextWrapping="Wrap" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" TabIndex="5" Height="26" VerticalAlignment="Top"/>
+        <ComboBox Name="cbProducto" IsEditable="True" IsReadOnly="True" Text="PRODUCTO" Foreground="Gray" Margin="10,72,10,0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Padding="15,0,0,0" TabIndex="3" Height="26" VerticalAlignment="Top">
             <ComboBoxItem>ALL-IN-ONE</ComboBoxItem>
             <ComboBoxItem>2-EN-1</ComboBoxItem>
             <ComboBoxItem>NOTEBOOK</ComboBoxItem>
         </ComboBox>
-        <TextBox Name="tbPedido" IsEnabled="True" Margin="70,10,0,0" TextWrapping="Wrap" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="20" FontFamily="Consolas" FontWeight="Bold" TabIndex="1" HorizontalAlignment="Left" Width="150" Height="26" VerticalAlignment="Top"/>
+        <TextBox Name="tbPedido" Text="PEDIDO" Foreground="Gray" IsEnabled="True" Margin="10,10,10,0" TextWrapping="Wrap" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="20" FontFamily="Consolas" FontWeight="Bold" TabIndex="1" Height="26" VerticalAlignment="Top"/>
 
-        <TextBox Name="tbObservacion" Margin="8,0,0,67" TextWrapping="Wrap" MaxLength="240" Padding="3" FontFamily="Consolas" BorderBrush="#FFABADB3" TabIndex="8" Height="125" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="212"/>
+        <TextBox Name="tbObservacion" Text="12345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789A" TextWrapping="Wrap" MaxLength="240" Padding="3" FontFamily="Consolas" BorderBrush="#FFABADB3" TabIndex="8" Height="135" VerticalAlignment="Top" Margin="10,249,10,0"/>
     </Grid>
 </Window>
