--- a/IngresoPedidos/MainWindow.xaml
+++ b/IngresoPedidos/MainWindow.xaml
@@ -8,57 +8,39 @@
 
     <Grid Name="mainGrid">
         <Grid.RowDefinitions>
-            <RowDefinition Height="72"/>
+            <RowDefinition Height="60"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
         <Grid Background="#FFA9D1F4" Grid.Row="0">
 
-            <Button x:Name="btnNuevoPedido" Click="btnNuevoPedido_Click" ToolTip="Ingresar un nuevo pedido a la Base de Datos" HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}" Margin="5,0,0,0">
-                <Image Source="/IngresoPedidos;component/Resources/nuevoregistro.ico" Width="48" Height="48" HorizontalAlignment="Left" VerticalAlignment="Center" />
+            <Button x:Name="btnNuevoPedido" Click="btnNuevoPedido_Click" ToolTip="Ingresar un Nuevo Pedido a la Base de Datos" VerticalAlignment="Center" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}" Margin="10,0,0,0" HorizontalAlignment="Left">
+                <Image Source="/IngresoPedidos;component/Resources/plus.png" Width="48" Height="48" />
             </Button>
 
-            <Button x:Name="btnBuscarPedido" Click="BtnBuscarPedido_Click" ToolTip="Buscar un pedido en la Base de Datos" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="447,11,0,41" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}" Height="20" Width="20">
-                <Image Source="/IngresoPedidos;component/Resources/buscar.ico" />
+            <Button x:Name="btnExportarPlanilla" ToolTip="Exportar lista a planilla de cálculos" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="119,0,0,0" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}">
+                <Image Source="/IngresoPedidos;component/Resources/xls (1).png" Width="48" Height="48" />
             </Button>
 
-            <Button x:Name="btnExportarPlanilla" ToolTip="Exportar lista a planilla de cálculos" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="62,10,0,10" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}">
-                <Image Source="/IngresoPedidos;component/Resources/exportar_a_excel.ico" Width="48" Height="48" HorizontalAlignment="Left" VerticalAlignment="Center" />
+            <Button x:Name="btnBuscarPedido" Click="btnBuscarPedido_Click" ToolTip="Buscar un pedido en la Base de Datos" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="67,0,0,0" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}">
+                <Image Source="/IngresoPedidos;component/Resources/search.png" VerticalAlignment="Center" HorizontalAlignment="Center" Width="48" Height="48" />
             </Button>
 
-            <Button x:Name="btnCambiarContraseña" Click="btnCambiarContraseña_Click" ToolTip="Cambiar contraseña" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,41,0" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}" Width="26" Height="26">
-                <Image Source="/IngresoPedidos;component/Resources/configuracion.ico" Height="24" />
+            <Button x:Name="btnFiltrarLista" Click="btnFiltrarLista_Click" ToolTip="Filtrar la lista por Estado" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="176,0,0,0" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}">
+                <Image Source="/IngresoPedidos;component/Resources/list (1).png" VerticalAlignment="Center" HorizontalAlignment="Center" Width="48" Height="48" />
             </Button>
 
-            <Button x:Name="btnCerrarSesion" ToolTip="Cerrar sesión" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,10,0" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}" Width="26" Height="26">
-                <Image Source="/IngresoPedidos;component/Resources/logout.ico" Height="24" />
-            </Button>
-
-            <Border BorderThickness="0"  CornerRadius="12" Background="#FF74B0E3" HorizontalAlignment="Right" Margin="0,10,72,0" VerticalAlignment="Top" Height="26">
-                <Label Margin="0" Foreground="White" VerticalContentAlignment="Center" TextOptions.TextFormattingMode="Display" Padding="5,0" HorizontalContentAlignment="Center" Content="SCHNEIDER NICOLAS" Background="{x:Null}" FontFamily="Consolas" Height="24" FontWeight="Bold" BorderBrush="{x:Null}"/>
+            <Border BorderThickness="0" MinWidth="200" CornerRadius="12" Background="#FF74B0E3" HorizontalAlignment="Right" Margin="0,12,92,12" VerticalAlignment="Center" Height="36" Width="36">
+                <Label Margin="0" Foreground="White" VerticalContentAlignment="Center" TextOptions.TextFormattingMode="Display" Padding="5,0" HorizontalContentAlignment="Center" Content="SCHNEIDER NICOLAS" Background="{x:Null}" FontFamily="Consolas" FontWeight="Bold" BorderBrush="{x:Null}"/>
             </Border>
 
-            <ComboBox x:Name="cbFiltros" Margin="0,0,10,5" SelectedValue="INGRESADO" FontFamily="Consolas" VerticalAlignment="Bottom" HorizontalAlignment="Right" FontSize="14" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
-                <ComboBox.Resources>
-                    <Style TargetType="{x:Type Border}">
-                        <Setter Property="CornerRadius" Value="10"/>
-                    </Style>
-                </ComboBox.Resources>
-            </ComboBox>
+            <Button x:Name="btnCambiarContraseña" Click="btnCambiarContraseña_Click" ToolTip="Cambiar contraseña" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,12,51,12" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}" Width="36" Height="36">
+                <Image Source="/IngresoPedidos;component/Resources/key (1).png" Width="32" Height="32" />
+            </Button>
 
-            <TextBox x:Name="tbKeyword" Margin="249,11,0,41" KeyDown="TbKeyword_KeyDown" TextWrapping="Wrap" MaxLength="28" Text="Buscar..." VerticalContentAlignment="Center" FontFamily="Consolas" FontWeight="Bold"  Background="GhostWhite" Foreground="Gray" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Width="193"/>
-            <!--<TextBox.Resources>
-                <Style TargetType="{x:Type Border}">
-                    <Setter Property="CornerRadius" Value="10"/>
-                </Style>
-            </TextBox.Resources>-->
-
-
-            <DatePicker Name="dpInicial" Text="SARASAAAA" Grid.Row="0" SelectedDateFormat="Short" DisplayDateStart="2019/01/01" HorizontalAlignment="Left" Margin="123,36,0,0" VerticalAlignment="Top" FontFamily="Consolas" FontWeight="Bold" Padding="2" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="121"/>
-            <DatePicker Name="dpFinal" SelectedDateFormat="Short" HorizontalAlignment="Left" Margin="249,36,0,0" VerticalAlignment="Top" FontFamily="Consolas" FontWeight="Bold" Background="{x:Null}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Padding="2" ScrollViewer.CanContentScroll="True"/>
-            <ComboBox Name="cbCampo" Style="{x:Null}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Padding="15,0,0,0" SelectedIndex="0" HorizontalAlignment="Left" Margin="123,11,0,0" VerticalAlignment="Top" Width="121" Height="20" FontFamily="Consolas" FontWeight="Bold"/>
-
-            <ComboBox Name="cbCampoFecha" Style="{x:Null}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Padding="5,0,0,0" SelectedIndex="0" HorizontalAlignment="Left" Margin="374,36,0,0" VerticalAlignment="Top" Width="68" Height="24" FontFamily="Consolas" FontWeight="Bold"/>
+            <Button x:Name="btnCerrarSesion" Click="btnCerrarSesion_Click" ToolTip="Cerrar sesión" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}" Width="36" Height="36">
+                <Image Source="/IngresoPedidos;component/Resources/door.png" Width="32" Height="32" />
+            </Button>
 
         </Grid>
         <DataGrid x:Name="dgPedidos" Grid.Row="1" ColumnWidth="*" Margin="0,5,0,0">
@@ -97,9 +79,9 @@
 
                     <Separator/>
 
-                    <MenuItem Header="Generar planilla egreso / ingreso" InputGestureText="Ctrl+G">
+                    <MenuItem Header="Generar planilla Egreso / Ingreso" InputGestureText="Ctrl+G">
                         <MenuItem.Icon>
-                            <Image Source="/IngresoPedidos;component/Resources/planilla_egreso_ingreso.ico"/>
+                            <Image Source="/IngresoPedidos;component/Resources/egresoingreso.ico"/>
                         </MenuItem.Icon>
                     </MenuItem>
 
