--- a/IngresoPedidos/CambiarContraseña.xaml
+++ b/IngresoPedidos/CambiarContraseña.xaml
@@ -3,23 +3,13 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:IngresoPedidos"
         mc:Ignorable="d"
-        Title="CAMBIAR CONTRASEÑA" Height="200" Width="320" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" Icon="/IngresoPedidos;component/Resources/agregar.ico" KeyDown="OnKeyDown">
+        Title="RENOVAR" Height="165" Width="150" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" SizeToContent="WidthAndHeight" Icon="/IngresoPedidos;component/Resources/password.ico" KeyDown="OnKeyDown">
 
-    <Grid FocusManager.FocusedElement="{Binding ElementName=pbContraseñaActual}" >
-
-        <Label Content="CONTRASEÑA ACTUAL" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" FontWeight="Bold" Padding="1" Height="26" HorizontalContentAlignment="Right" Background="{x:Null}" FontFamily="Consolas" Width="121"/>
-        <Label Content="NUEVA CONTRASEÑA" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" FontWeight="Bold" Padding="1" Height="26" HorizontalContentAlignment="Right" Background="{x:Null}" FontFamily="Consolas" Width="121"/>
-        <Label Content="REPETIR CONTRASEÑA" HorizontalAlignment="Left" Margin="10,72,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" FontWeight="Bold" Padding="1" Height="26" HorizontalContentAlignment="Right" Background="{x:Null}" FontFamily="Consolas"/>
-
-        <PasswordBox Name="pbContraseñaActual" KeyDown="OnKeyDown" Height="26" VerticalAlignment="Top" Margin="136,10,11,0" FontFamily="Consolas" FontSize="14" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" TabIndex="1"/>
-        <PasswordBox Name="pbContraseñaNueva1" KeyDown="OnKeyDown" Height="26" Margin="136,41,11,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="Consolas" FontSize="14" TabIndex="2"/>
-        <PasswordBox Name="pbContraseñaNueva2" KeyDown="OnKeyDown" Height="26" Margin="136,72,11,0" VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" TabIndex="3"/>
-
-        <Button Name="btnGuardarContraseña" Click="btnGuardarContraseña_Click" ToolTip="Guardar contraseña nueva" HorizontalAlignment="Center" VerticalAlignment="Bottom" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="{x:Null}" Margin="0,0,0,5" TabIndex="4">
-            <Image Source="/IngresoPedidos;component/Resources/guardar.ico" Width="48" Height="48"  />
-        </Button>
-
+    <Grid FocusManager.FocusedElement="{Binding ElementName=tbLegajo}" Height="136" Width="144">
+        <PasswordBox Name="pbContraseñaActual" KeyDown="OnKeyDown" Margin="10,10,10,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="Consolas" FontSize="14" TabIndex="2" Height="26" VerticalAlignment="Top"/>
+        <PasswordBox Name="pbContraseñaNueva1" KeyDown="OnKeyDown" Margin="10,41,10,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="Consolas" FontSize="14" TabIndex="2" Height="26" VerticalAlignment="Top"/>
+        <PasswordBox Name="pbContraseñaNueva2" KeyDown="OnKeyDown" Margin="10,72,10,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="Consolas" FontSize="14" TabIndex="2" Height="26" VerticalAlignment="Top"/>
+        <Button Name="btnGuardarContraseña" Click="btnGuardarContraseña_Click" ToolTip="Ingresar" Content="Aceptar" Margin="0,0,0,10" TabIndex="3" Height="22" VerticalAlignment="Bottom" HorizontalAlignment="Center" Width="70"/>
     </Grid>
 </Window>
